--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 @import (./fonts/SFMonoBoldItalic.otf);
 @import (./fonts/SFMonoRegular.otf);
 @import (./fonts/SFMonoRegularItalic.otf);
+@import (./fonts/SF-Pro-Display-Bold.otf);
+@import (./fonts/SF-Pro-Display-BoldItalic.otf);
+@import (./fonts/SF-Pro-Display-Regular.otf);
+@import (./fonts/SF-Pro-Display-RegularItalic.otf);
 
 * {
   padding : 0;
@@ -11,8 +15,9 @@
 
 /* Style the body */
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: SF Pro, sans-serif;
   margin: 0;
+  color: white
 }
 
 /* Header/logo Title */
@@ -239,16 +244,23 @@ body {
 .side {
   -ms-flex: 30%; /* IE10 */
   flex: 30%;
-  background-color: #f1f1f1;
+  background-color: #201461;
   padding: 20px;
+}
+
+.side h1 {   
+  font-family: SF Mono, monospace;
 }
 
 /* Main column */
 .main {   
   -ms-flex: 70%; /* IE10 */
   flex: 70%;
-  background-color: white;
+  background-color: #22226F;
   padding: 20px;
+}
+.main h1 {   
+  font-family: SF Mono, monospace;
 }
 
 /* Fake image, just for this example */
@@ -260,9 +272,10 @@ body {
 
 /* Footer */
 .footer {
+  font-family: SF Mono, monospace;
   padding: 20px;
   text-align: center;
-  background: #ddd;
+  background: #377E8D;
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
